8008554: load was broken for URLs
Reviewed-by: attila, sundar